Resolves the issue about the visible resize handle bug

--- a/lynxkite-app/web/src/index.css
+++ b/lynxkite-app/web/src/index.css
@@ -692,6 +692,22 @@ svg {
   border-width: 2px;
 }
 
+.react-flow {
+  --xy-resize-background-color: transparent;
+}
+
+.react-flow__resize-control.handle {
+  border-color: transparent !important;
+  width: 30px;
+  height: 30px;
+}
+
+.react-flow__resize-control.line {
+  border-color: transparent !important;
+  width: 6px;
+  height: 6px;
+}
+
 .react-flow__arrowhead * {
   stroke: none;
   fill: black;
